@@ -161,4 +161,5 @@ BUGFIXES FROM KDE BUGZILLA (https://www.digikam.org/changelog):
 123 ==> 359108 - 5 beta 3: interface problem, icons not showing up.
 124 ==> 361275 - Compile time error: undefined reference while linking renamecustomizertest.
 125 ==> 361440 - Panorama Tool can`t find a pto2mk.
-126 ==> 
+126 ==> 361339 - Creates nameless subalbums and corrupts album hierarchy.
+127 ==> 
